# derive_display_from_debug

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
tests/: test.rs
