[package]
name = "derive_display_from_debug"
version = "0.1.2"
authors = ["kklibo"]
edition = "2018"
description = "A trivial Rust macro to derive the Display trait for any type with the Debug trait"
homepage = "https://github.com/kklibo/derive_display_from_debug"
repository = "https://github.com/kklibo/derive_display_from_debug"
readme = "README.md"
license-file = "LICENSE"
license = "CC0-1.0"


[lib]
proc-macro = true

[dependencies]
syn = "1.0.48"
quote = "1.0.7"
